--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@model List<Dish>
 
 <div class="text-center">
     <h1 class="display-4">Welcome to CRUDelicious!</h1>
