--- a/Views/Dish/NewDish.cshtml
+++ b/Views/Dish/NewDish.cshtml
@@ -10,6 +10,9 @@
         <div class="mx-2">
             <div class="mb-5">
                 <label asp-for="Chef">Chef's Name:</label>
+
+                @await Html.PartialAsync("_AllChefNames")
+                
                 <input asp-for="Chef" class="form-control">
                 <span class="text-danger" asp-validation-for="Chef"></span>
             </div>
