--- a/Views/Dish/NewDish.cshtml
+++ b/Views/Dish/NewDish.cshtml
@@ -9,12 +9,15 @@
         @* col one *@
         <div class="mx-2">
             <div class="mb-5">
-                <label asp-for="Chef">Chef's Name:</label>
-
-                @await Html.PartialAsync("_AllChefNames")
+                <label asp-for="ChefId">Chef's Name:</label>
                 
-                <input asp-for="Chef" class="form-control">
-                <span class="text-danger" asp-validation-for="Chef"></span>
+                
+                <Select asp-for="ChefId" class="">
+                    @foreach (Chef c in @ViewBag.ChefNames)
+                {
+                    <option value = "@c.ChefId"  >@c.FirstName @c.LastName</option>
+                }
+                </Select>
             </div>
             <div class="mb-5">
                 <label asp-for="Name"></label>
