--- a/Views/Dish/OneDish.cshtml
+++ b/Views/Dish/OneDish.cshtml
@@ -6,7 +6,7 @@
 
 <h1>@Model.Name</h1>
 <p><a asp-action="AllDishes">Home</a> | <a asp-action="NewDish">Add a Dish</a></p>
-<p>@Model.Name by @Model.Chef</p>
+<p>@Model.Name by chef name</p>
 <p>@Model.Description</p>
 <p>Calories: @Model.Calories</p>
 <p>Tastiness: @Model.Tastiness</p>
