--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,12 @@
                         </li>
                         @* here we updated the layout page to make navigation easier *@
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Chef" asp-action="AllChefs">All Chefs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Dish" asp-action="AllDishes">All Dishes</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Dish" asp-action="NewDish">Create a Dish</a>
                         </li>
                         <li class="nav-item">
